vm/src/snapshots/vm__test__stack_snapshot_tests@functions__call.tapir.snap
---
source: crates/tapir-script/vm/src/lib.rs
expression: stack_at_waits
input_file: crates/tapir-script/vm/src/snapshot_tests/stack/functions/call.tapir
---
[
  ([
    [
      -1,
    ],
  ], PropObj(
    int_prop: 5,
  )),
  ([
    [
      -1,
      0,
      33554434,
    ],
  ], PropObj(
    int_prop: 5,
  )),
  ([
    [
      -1,
      0,
      33554434,
      33,
    ],
  ], PropObj(
    int_prop: 5,
  )),
  ([
    [
      -1,
      0,
      33554434,
      33,
    ],
  ], PropObj(
    int_prop: 5,
  )),
  ([], PropObj(
    int_prop: 121,
  )),
]
