vm/src/snapshots/vm__test__stack_snapshot_tests@functions__call_complex.tapir.snap
---
source: crates/tapir-script/vm/src/lib.rs
expression: stack_at_waits
input_file: crates/tapir-script/vm/src/snapshot_tests/stack/functions/call_complex.tapir
---
[
  ([
    [
      -1,
      55,
      0,
      0,
      67108868,
      55,
    ],
  ], PropObj(
    int_prop: 5,
  )),
  ([
    [
      -1,
      55,
      0,
      0,
      67108868,
      55,
      0,
      12,
      67108883,
      55,
      12,
    ],
  ], PropObj(
    int_prop: 5,
  )),
  ([
    [
      -1,
      111,
      67,
      44,
      67108868,
      67,
      67,
      12,
      67108883,
      67,
      12,
      67,
    ],
  ], PropObj(
    int_prop: 5,
  )),
  ([], PropObj(
    int_prop: 111,
  )),
]
