vm/src/snapshots/vm__test__stack_snapshot_tests@functions__call_statement.tapir.snap
---
source: crates/tapir-script/vm/src/lib.rs
expression: stack_at_waits
input_file: crates/tapir-script/vm/src/snapshot_tests/stack/functions/call_statement.tapir
---
[
  ([
    [
      -1,
      67,
      67,
      50331652,
      67,
      67,
    ],
  ], PropObj(
    int_prop: 5,
  )),
  ([
    [
      -1,
      33,
      67,
      50331659,
      33,
      33,
    ],
  ], PropObj(
    int_prop: 33,
  )),
  ([
    [
      -1,
      33,
      67,
      50331659,
      33,
      33,
      33,
    ],
  ], PropObj(
    int_prop: 33,
  )),
  ([], PropObj(
    int_prop: 67,
  )),
]
