vm/src/snapshots/vm__test__stack_snapshot_tests@functions__factorial_recursive.tapir.snap
---
source: crates/tapir-script/vm/src/lib.rs
expression: stack_at_waits
input_file: crates/tapir-script/vm/src/snapshot_tests/stack/functions/factorial_recursive.tapir
---
[
  ([], PropObj(
    int_prop: 3628800,
  )),
]
