vm/src/snapshots/vm__test__stack_snapshot_tests@functions__void_function.tapir.snap
---
source: crates/tapir-script/vm/src/lib.rs
expression: stack_at_waits
input_file: crates/tapir-script/vm/src/snapshot_tests/stack/functions/void_function.tapir
---
[
  ([], PropObj(
    int_prop: 3628800,
  )),
]
